ui starting to work, embedded! yay!

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -17,9 +17,9 @@
     </div>
   </main>
 
-  <script src="/static/popper/popper.min.js"></script>
-  <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/static/js/enableStuff.js"></script>
+  <!-- <script src="/static/popper.min.js"></script>
+  <script src="/static/bootstrap.min.js"></script>
+  <script src="/static/js/enableStuff.js"></script> -->
 </body>
 
 </html>
