--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -42,20 +42,24 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse my-1 d-md-flex justify-content-between" id="navbarSupportedContent">
+                {{if .IsAuthenticated}}
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/ui/transfers">Transfers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/ui/connections">Connections</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/ui/queries">Queries</a>
+                    </li>
+                    {{if .IsAdmin }}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/ui/connections">Connections</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/ui/users">Users</a>
                     </li>
+                    {{end}}
                 </ul>
+                {{end}}
                 {{if .IsAuthenticated}}
                 <ul class="navbar-nav">
                     <li class="nav-item">
