--- a/ui/html/queries/query-detail.page.tmpl
+++ b/ui/html/queries/query-detail.page.tmpl
@@ -20,7 +20,7 @@
             </span>
             </button>
         {{ end }}
-    
+        {{ if .IsAdmin }}
         <button class="btn btn-outline-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete">
             <span data-bs-toggle="modal" data-bs-target="#deleteModal">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-trash"
@@ -32,6 +32,7 @@
                 </svg>
             </span>
         </button>
+        {{end}}
     </div>
 </div>
 
