--- a/ui/html/transfers/create-transfer.page.tmpl
+++ b/ui/html/transfers/create-transfer.page.tmpl
@@ -55,7 +55,7 @@
             <div class="mb-3">
                 <label for="query" class="form-label">Query</label>
                 <textarea rows=5 class="form-control {{with .Form.Validator.Get "query"}}is-invalid{{end}}" id="query"
-                    name="query" value='{{.Form.Get "query"}}'></textarea>
+                    name="query">{{.Form.Get "query"}}</textarea>
                 {{with .Form.Validator.Get "query"}}
                 <div class="invalid-feedback">{{.}}</div>
                 {{end}}
