--- a/ui/html/connections/connections.page.tmpl
+++ b/ui/html/connections/connections.page.tmpl
@@ -77,6 +77,8 @@
     </tbody>
 </table>
 
+{{template "pagination" .}}
+
 <!-- Readme Modal -->
 <div class="modal fade" id="readmeModal" tabindex="-1">
     <div class="modal-dialog">
