--- a/ui/html/queries/queries.page.tmpl
+++ b/ui/html/queries/queries.page.tmpl
@@ -83,6 +83,8 @@
     </tbody>
 </table>
 
+{{template "pagination" .}}
+
 <!-- Modal -->
 <div class="modal fade" id="readmeModal" tabindex="-1">
     <div class="modal-dialog">
