--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -96,7 +96,7 @@
 
     <script src="/static/popper/popper.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/js/enableStuff.js"></script>
+    <script src="/static/js/enableToolTips.js"></script>
     {{with .Flash}}
     <script src="/static/js/flash.js"></script>
     {{end}}
