transfers via web and api starting to work

--- a/ui/html/connections/connection-detail.page.tmpl
+++ b/ui/html/connections/connection-detail.page.tmpl
@@ -98,7 +98,7 @@
                     <td>{{ .Connection.DbName }}</td>
                 </tr>
                 <tr>
-                    <th scope="row" class="bg-dark text-light">Connection test result</th>
+                    <th scope="row" class="bg-dark text-light">Can connect</th>
                     <td>{{ .Connection.CanConnect }}</td>
                 </tr>
             </tbody>
