--- a/ui/html/connections/connections.page.tmpl
+++ b/ui/html/connections/connections.page.tmpl
@@ -74,7 +74,7 @@
                     href="/ui/connections/{{ .ID }}">{{.Hostname}}</a></td>
             {{ else }}
             <td class="py-3"><a class="py-3" style="display: block; text-decoration: none; color: inherit;"
-                href="/ui/connections/{{ .ID }}">{{.Hostname}}</a></td>
+                href="/ui/connections/{{ .ID }}">{{.AccountId}}</a></td>
             {{end}}
         </tr>
         {{end}}
