--- a/ui/html/queries/query-detail.page.tmpl
+++ b/ui/html/queries/query-detail.page.tmpl
@@ -48,6 +48,10 @@
 <div class="d-block bg-light p-3">
     <code>{{ .Error }}</code>
 </div>
+<h4 class="mt-5">Error Properties</h4>
+<div class="d-block bg-light p-3">
+    <code>{{ .ErrorProperties }}</code>
+</div>
 {{ end }}
 
 <h4 class="mt-5 mb-2">Query</h4>
