--- a/ui/html/queries/queries.page.tmpl
+++ b/ui/html/queries/queries.page.tmpl
@@ -51,7 +51,8 @@
 
     <!-- Table head -->
     <thead class="table-dark">
-        <th scope="col" class="py-3">Created At</th>
+        <th scope="col" class="py-3"><a data-bs-toggle="tooltip" data-bs-placement="top"
+            title="Sort by created at ascending (default descending)" style="text-decoration: none; color:inherit;" href="/ui/queries?sort=created_at">Created At</a></th>
         <th scope="col" class="py-3">Connection</th>
         <th scope="col" class="py-3">Query</th>
     </thead>
