starting to do some logging stuff

--- a/ui/html/pagination.partial.tmpl
+++ b/ui/html/pagination.partial.tmpl
@@ -15,13 +15,14 @@
     <div class="col-4 d-flex justify-content-end align-items-center">
         <p class="me-2 p-0 m-0">Page Size</p>
         <form action="/ui/{{.PaginationData.PageName}}" method="GET">
-            <select id="pageSize" name="page_size" class="form-select align-self-start" style="max-width: 120px;"
+            <select id="pageSize" name="page-size" class="form-select align-self-start" style="max-width: 120px;"
                 onchange="this.form.submit()">
                 <option value=10 {{if eq .Metadata.PageSize 10 }}selected{{end}}>10</option>
                 <option value=25 {{if eq .Metadata.PageSize 25 }}selected{{end}}>25</option>
                 <option value=42 {{if eq .Metadata.PageSize 42 }}selected{{end}}>42</option>
                 <option value=50 {{if eq .Metadata.PageSize 50 }}selected{{end}}>50</option>
                 <option value=100 {{if eq .Metadata.PageSize 100 }}selected{{end}}>100</option>
+                <option value=1000 {{if eq .Metadata.PageSize 1000 }}selected{{end}}>1000</option>
             </select>
             <input type='hidden' name='sort' value='-id'>
         </form>
