--- a/ui/html/transfers/transfers.page.tmpl
+++ b/ui/html/transfers/transfers.page.tmpl
@@ -52,7 +52,7 @@
     <!-- Table head -->
     <thead class="table-dark">
         <th scope="col" class="py-3"><a data-bs-toggle="tooltip" data-bs-placement="top"
-            title="Sort by created at ascending (default descending)" style="text-decoration: none; color:inherit;" href="/ui/transfers?sort=created_at">Created At</a></th>
+            title="Sort by created at ascending (default descending)" style="text-decoration: none; color:inherit;" href="/ui/transfers?sort=created-at">Created At</a></th>
         <th scope="col" class="py-3">Source</th>
         <th scope="col" class="py-3">Target</th>
         <th scope="col" class="py-3">Target Table</th>
