--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -45,10 +45,10 @@
                 {{if .IsAuthenticated}}
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/ui/transfers?sort=-id">Transfers</a>
+                        <a class="nav-link" href="/ui/transfers">Transfers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/ui/queries?sort=-id">Queries</a>
+                        <a class="nav-link" href="/ui/queries">Queries</a>
                     </li>
                     {{if .IsAdmin }}
                     <li class="nav-item">
