starting to add sync

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -57,6 +57,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/ui/users">Users</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://docs.sqlpipe.com">Docs</a>
+                    </li>
                     {{end}}
                 </ul>
                 {{end}}
